--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <div class="header-section">
         <h1>Star Wars Unlimited Draft Timer</h1>
         <div class="subtitle">Created by longorefisher (Matthew Fisher)</div>
+        <div class="subtitle">Refer to the numbered list below for suggested draft caller commands.</div>
     </div>
 
     <div class="wrapper">
@@ -355,3 +356,4 @@
     </script>
 </body>
 </html>
+
